packages/documentation/src/stories/home.styles.scss
@use 'sass:map';
@use '@swisspost/design-system-styles/core.scss' as post;
@use '@swisspost/design-system-styles/mixins/utilities';

.bg-fullwidth {
  position: relative;

  &:before,
  &:after {
    display: block;
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    background-color: inherit;
    width: 100vw;
  }

  &:before {
    right: 100%;
  }

  &:after {
    left: 100%;
  }
}

.tile-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: post.$size-big;

  @include post.media-breakpoint-down(rg) {
    gap: post.$size-regular;
  }
}

.feature {
  padding: post.$size-regular;

  .feature--icon {
    margin-bottom: post.$size-regular;
    font-size: post.$size-huge;
    color: post.$aubergine-dark;
  }

  .feature--content {
    .content--title {
      font-size: post.$h6-font-size;
      font-weight: post.$font-weight-bold;
    }
  }
}

